samples/_failures_safe/1761359796_ddea8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3e419fd.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_a3e419fd.c:145:9: error: expected ‘:’ or ‘...’ at end of input
  145 |         case DFS
      |         ^~~~
./samples/SAFE/__tmp_a3e419fd.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3e419fd.c:145:9: error: expected declaration or statement at end of input
